--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>  
   <title>FlickList</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -28,7 +31,7 @@
   
 
   <!-- TODO include our flicklist.js script -->
-  <script src="???"></script>
+  <script src="js/flicklist.js"></script>
 
 </body> 
 </html>
